fixed up sidebar, dark mode, forms and styling

--- a/cash-money-citations/css/style.css
+++ b/cash-money-citations/css/style.css
@@ -35,6 +35,16 @@
 }
 
 
+html, body {
+  /* height: 100%; */
+  
+
+}
+
+body.dark {
+  --bg-color: #303030; /* Dark mode background */
+}
+
 
 * {
   font-family: "Open Sans", sans-serif;
